# SquirrelMail

./: README.md  index.php  robots.txt
class/: error.class.php  html.class.php  l10n.class.php  mime.class.php
class/deliver/: Deliver.class.php  Deliver_IMAP.class.php  Deliver_SMTP.class.php  Deliver_SendMail.class.php
class/helper/: VCard.class.php  index.php
class/l10n/: gettext.class.php  index.php  streams.class.php
class/mime/: AddressStructure.class.php  ContentType.class.php  Disposition.class.php  Language.class.php  Message.class.php  MessageHeader.class.php  Rfc822Header.class.php  SMimeMessage.class.php  index.php
class/template/: PHP_Template.class.php  Smarty_Template.class.php  Template.class.php  index.php
config/: conf.pl  config_default.php  config_local.php  default_pref  index.php
contrib/: decrypt_headers.php
data/: default_pref
doc/: ChangeLog  INSTALL  ReleaseNotes  index.php  presets.txt
functions/: abook_database.php  abook_ldap_server.php  abook_local_file.php  addressbook.php  arrays.php  attachment_common.php  auth.php  compose.php  constants.php  date.php  db_prefs.php  display_messages.php  file_prefs.php  files.php  folder_manip.php  forms.php  gettext.php  global.php  html.php  i18n.php  identity.php  imap.php  imap_asearch.php  imap_general.php  imap_mailbox.php  imap_messages.php  imap_search.php  imap_utf7_local.php  index.php  mailbox_display.php  mime.php  ngettext.php  options.php  page_header.php  plugin.php  prefs.php  rfc822address.php  strings.php  tree.php  url_parser.php
functions/decode/: cp1250.php  cp1251.php  cp1252.php  cp1253.php  cp1254.php  cp1255.php  cp1256.php  cp1257.php  cp1258.php  cp855.php  cp866.php  index.php  iso_8859_1.php  iso_8859_10.php  iso_8859_11.php  iso_8859_13.php  iso_8859_14.php  iso_8859_15.php  iso_8859_16.php  iso_8859_2.php  iso_8859_3.php  iso_8859_4.php  iso_8859_5.php  iso_8859_6.php  iso_8859_7.php  iso_8859_8.php  iso_8859_9.php  iso_ir_111.php  koi8_r.php  koi8_u.php  ns_4551_1.php  tis_620.php  us_ascii.php  utf_8.php
functions/encode/: cp1251.php  cp1255.php  cp1256.php  index.php  iso_8859_1.php  iso_8859_15.php  iso_8859_2.php  iso_8859_7.php  iso_8859_9.php  koi8_r.php  koi8_u.php  tis_620.php  us_ascii.php  utf_8.php
functions/htmlentities/: index.php  iso-8859-1.php  readme.php  utf-8.php
functions/template/: abook_util.php  folder_list_util.php  general_util.php  message_list_util.php  paginator_util.php
help/: index.php
include/: index.php  load_prefs.php  validate.php
include/options/: accessibility.php  compose.php  display.php  folder.php  personal.php
include/timezones/: check.php  index.php  standard.php  standard_orig.php
locale/: index.php
plugins/: index.php
plugins/add_address/: add_addresses.php  config.php  config_default.php  config_example.php  functions.php  index.php  setup.php  version
plugins/administrator/: admins  auth.php  defines.php  index.php  options.php  setup.php
plugins/archive_mail/: README  index.php  setup.php  version
plugins/autocomplete/: abook_lookup.php  config_example.php  functions.php  main.php  make_release.sh  setup.php  version
plugins/bug_report/: bug_report.php  config_default.php  functions.php  index.php  setup.php  show_system_specs.php  system_specs.php
plugins/calendar/: calendar.php  calendar_data.php  day.php  event_create.php  event_delete.php  event_edit.php  functions.php  index.php  setup.php
plugins/censor/: INSTALL  README  censor.pot  config.sample.php  functions.php  getpot  harsh_profanities.txt  make_release.sh  setup.php  tame_profanities.txt  version
plugins/change_pass/: README  change_pass.pot  config_example.php  functions.php  options.php  setup.php  version
plugins/change_password/: config_default.php  functions.php  options.php  setup.php
plugins/change_sqlpass/: INSTALL  README  change_sqlpass.pot  config.php.sample  functions.php  generate.php  getpot  index.php  make_release.sh  md5crypt.php  options.php  setup.php  version
plugins/compatibility/: functions.php  setup.php  version
plugins/compose_chars/: README  cc_interface.php  setup.php  version
plugins/compose_extras/: config_default.php  functions.php  (+5 more)
plugins/local_autorespond_forward/suid_backend/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  squirrelmail_autoresponder_forwarder_proxy.c
plugins/local_autorespond_forward/suid_backend/autom4te.cache/: output.0  requests  traces.0
po/: independent_strings.txt  index.php  squirrelmail.pot  xgetpo
scripts/: common.js  index.php  reload_page.js  remote_request.js
src/: about.php  addrbook_popup.php  addrbook_search.php  addrbook_search_html.php  addressbook.php  compose.php  configtest.php  delete_message.php  download.php  empty_trash.php  folders.php  folders_create.php  folders_delete.php  folders_rename_do.php  folders_rename_getname.php  folders_subscribe.php  help.php  image.php  index.php  left_main.php  login.php  mailto.php  move_messages.php  options.php  options_highlight.php  options_identities.php  options_order.php  printer_friendly_bottom.php  printer_friendly_main.php  printer_friendly_top.php  read_body.php  redirect.php  right_main.php  search.php  signout.php  squirrelmail_rpc.php  style.php  vcard.php  view_header.php  view_html.php  (+2 more)
themes/: alien_glow.php  autumn.php  autumn2.php  black_bean_burrito_theme.php  blue_grey_theme.php  blue_on_blue.php  bluesnews_theme.php  bluesome.php  bluesteel_theme.php  christmas.php  classic_blue.php  classic_blue2.php  color_theme_to_css.php  dark_green.php  dark_grey_theme.php  darkness.php  deepocean2_theme.php  deepocean_theme.php  default_theme.php  dompie_theme.php  forest_theme.php  forestnight.php  greenhouse_effect.php  high_contrast_theme.php  ice_theme.php  in_the_pink.php  index.php  jult_dark.php  kind_of_blue.php  maize_theme.php  methodical_theme.php  midnight.php  minimal_bw.php  monostochastic.php  netstyle_theme.php  penguin.php  plain_blue_theme.php  powder_blue.php  purple_theme.php  random.php  (+18 more)
(+520 files in other folders)
