# SquirrelMail Local User Autoresponder and Mail Forwarder
# SUID Backend Makefile.am meta Makefile config file
#
# change bindir as desired
#

# bindir = /usr/local/sbin
bindir = ../
bin_PROGRAMS = squirrelmail_autoresponder_forwarder_proxy
squirrelmail_autoresponder_forwarder_proxy_SOURCES = squirrelmail_autoresponder_forwarder_proxy.c
INSTALL_PROGRAM = $(INSTALL) -m 4755

